added basic google map - need to change location with SPARQL based on user input

--- a/Style.css
+++ b/Style.css
@@ -52,10 +52,6 @@ table {
 	font-family: Courier New;
 }
 
-
-header{
-}
-
 body{
 	background-color: #F2F2F2;
 }
@@ -114,5 +110,5 @@ p{
 }
 
 #map{
-	
+	height: 240px;
 }
