added results panel

--- a/Style.css
+++ b/Style.css
@@ -29,8 +29,8 @@ table {
 .col-1 {width: 8.33%;}
 .col-2 {width: 16.66%;}
 .col-3 {width: 19.5%;}
-.col-4 {width: 33.33%;}
-.col-5 {width: 41.66%;}
+.col-4 {width: 39%;}
+.col-5 {width: 25%;}
 .col-6 {width: 50%;}
 .col-7 {width: 58.33%;}
 .col-8 {width: 66.66%;}
@@ -64,6 +64,15 @@ h1{
 	
 }
 
+#results{
+	text-align: center;
+	font-family: Courier New;
+	color: gray;
+	height: 240px;
+	background-color: white;
+}
+
+
 p{
 	text-align: center;
 	font-family: Arial;
@@ -86,7 +95,6 @@ p{
 
 #selection{
 	
-	background-color: white;
 	color: #696262;
 	font-family: courier new;
 	font-size: 25px;
