--- a/css/style.css
+++ b/css/style.css
@@ -36,10 +36,10 @@ table {
 
 
 .buttonStyle{
-	background-color: #cfe2e2;
+	background-color: #FF8E00;
     border: none;
-    color: #696262;
-    padding: 10px 30px;
+    color: white;
+    padding: 10px 20px;
     text-align: center;
     display: inline-block;
     font-size: 15px;
@@ -70,6 +70,8 @@ margin-right: auto;
 h1{
 	color: #696262;
 	text-align: center;
+  font-size: 48px;
+
 
 }
 
